--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <organization>
-        <name>FocuSNS</name>
+        <name>FocusSNS</name>
         <url>http://www.focusns.org</url>
     </organization>
     <developers>
