--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
     <artifactId>focusns</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>Focus SNS</name>
+    <url>http://www.focusns.org</url>
+
     <modules>
         <module>focusns-base</module>
         <module>focusns-web</module>
