--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:gavin-hu/focusns.git</connection>
+        <developerConnection>scm:git:git@github.com:gavin-hu/focusns.git</developerConnection>
+        <url>https://github.com/gavin-hu/focusns</url>
+    </scm>
     <dependencyManagement>
         <dependencies>
             <!-- Focusns API -->
@@ -221,14 +226,14 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
                     <version>7.5.4.v20111024</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12</version>
                 </plugin>
                 <plugin>
                     <groupId>com.googlecode.flyway</groupId>
@@ -237,5 +242,11 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
