--- a/focusns-base/focusns-model/pom.xml
+++ b/focusns-base/focusns-model/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.focusns</groupId>
     <artifactId>focusns-base</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0.20130118</version>
   </parent>
   <artifactId>focusns-model</artifactId>
 </project>
