--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.focusns</groupId>
         <artifactId>focusns-base</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0.20130118</version>
     </parent>
     <artifactId>focusns-runtime</artifactId>
     <dependencies>
@@ -112,10 +111,10 @@
                 <groupId>com.googlecode.flyway</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
                 <configuration>
-                    <driver></driver>
+                    <driver />
                     <serverId>flyway-db</serverId>
                     <schemas>
-                        <schema></schema>
+                        <schema />
                     </schemas>
                 </configuration>
             </plugin>
