--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.focusns</groupId>
         <artifactId>focusns-base</artifactId>
-        <version>2.0.0.20130118</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>focusns-runtime</artifactId>
     <dependencies>
