--- a/focusns-web/pom.xml
+++ b/focusns-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>focusns</artifactId>
         <groupId>org.focusns</groupId>
-        <version>2.0.0.20130118</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>focusns-web</artifactId>
