--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.focusns</groupId>
     <artifactId>focusns</artifactId>
-    <version>2.0.0.20130118</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Focus SNS</name>
     <url>http://www.focusns.org</url>
@@ -39,7 +39,6 @@
         <connection>scm:git:git@github.com:gavin-hu/focusns.git</connection>
         <developerConnection>scm:git:git@github.com:gavin-hu/focusns.git</developerConnection>
         <url>https://github.com/gavin-hu/focusns</url>
-      <tag>focusns-2.0.0.20130118</tag>
   </scm>
     <dependencyManagement>
         <dependencies>
