Enhance msg module

--- a/focusns-base/focusns-runtime/src/main/resources/application.properties
+++ b/focusns-base/focusns-runtime/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test
+jdbc.url=jdbc:mysql://127.0.0.1:3306/focusns
 jdbc.username=root
 jdbc.password=
 jdbc.initSize=1
