Application Refactor 1. Widget Framework enhanced 2. Profile module enhanced 3. Message module enhanced 4. Configuration  optimized

--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -98,7 +98,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.scribe</groupId>
+            <artifactId>scribe</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.googlecode.flyway</groupId>
             <artifactId>flyway-core</artifactId>
