--- a/pom.xml
+++ b/pom.xml
@@ -212,6 +212,12 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.scribe</groupId>
+                <artifactId>scribe</artifactId>
+                <version>1.3.3</version>
+            </dependency>
             
             <dependency>
                 <groupId>com.googlecode.flyway</groupId>
