--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -19,7 +19,18 @@
             <groupId>org.focusns</groupId>
             <artifactId>focusns-service</artifactId>
         </dependency>
-		
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.3.0.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
