--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.focusns</groupId>
     <artifactId>focusns</artifactId>
@@ -44,7 +45,7 @@
         <connection>scm:git:git@github.com:gavin-hu/focusns.git</connection>
         <developerConnection>scm:git:git@github.com:gavin-hu/focusns.git</developerConnection>
         <url>https://github.com/gavin-hu/focusns</url>
-  </scm>
+    </scm>
     <dependencyManagement>
         <dependencies>
             <!-- Focusns API -->
@@ -73,7 +74,7 @@
                 <artifactId>focusns-web</artifactId>
                 <version>${project.version}</version>
             </dependency>
-			
+
             <!-- Spring Framework -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -110,7 +111,7 @@
                 <artifactId>spring-webmvc</artifactId>
                 <version>${spring.version}</version>
             </dependency>
-            
+
             <!-- CGLib -->
             <dependency>
                 <groupId>cglib</groupId>
@@ -129,7 +130,7 @@
                 <artifactId>aspectjrt</artifactId>
                 <version>${aspectj.version}</version>
             </dependency>
-			
+
             <!-- Database Access -->
             <dependency>
                 <groupId>org.mybatis</groupId>
@@ -151,7 +152,7 @@
                 <artifactId>mybatis-spring</artifactId>
                 <version>1.1.1</version>
             </dependency>
-			
+
             <!-- Unit Test -->
             <dependency>
                 <groupId>junit</groupId>
@@ -165,7 +166,7 @@
                 <version>${spring.version}</version>
                 <scope>test</scope>
             </dependency>
-			
+
             <!-- Java EE -->
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -184,7 +185,7 @@
                 <artifactId>hibernate-validator</artifactId>
                 <version>4.3.0.Final</version>
             </dependency>
-			
+
             <!-- Freemarker -->
             <dependency>
                 <groupId>org.freemarker</groupId>
@@ -203,7 +204,7 @@
                 <artifactId>log4j</artifactId>
                 <version>1.2.17</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>com.mortennobel</groupId>
                 <artifactId>java-image-scaling</artifactId>
@@ -225,7 +226,7 @@
                 <artifactId>scribe</artifactId>
                 <version>1.3.3</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>com.googlecode.flyway</groupId>
                 <artifactId>flyway-core</artifactId>
@@ -273,12 +274,9 @@
                         <roots>
                             <root>src/main/java</root>
                             <root>src/main/resources</root>
+                            <root>src/test/java</root>
+                            <root>src/test/resources</root>
                         </roots>
-                        <excludes>
-                            <exclude>
-                                src/main/resources/META-INF
-                            </exclude>
-                        </excludes>
                         <extraExtensions>
                             <sql>mysql</sql>
                         </extraExtensions>
