Prepare file header update

--- a/focusns-install/pom.xml
+++ b/focusns-install/pom.xml
@@ -29,6 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>focusns-install</artifactId>
+    <name>FocusSNS Install</name>
 
     <build>
         <resources>
