--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -5,7 +5,10 @@
         <artifactId>focusns-base</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>focusns-runtime</artifactId>
+    <name>FocusSNS Runtime</name>
+
     <dependencies>
         <dependency>
             <groupId>org.focusns</groupId>
