--- a/focusns-base/pom.xml
+++ b/focusns-base/pom.xml
@@ -7,6 +7,7 @@
 	</parent>
 	<artifactId>focusns-base</artifactId>
 	<packaging>pom</packaging>
+    <name>FocusSNS Base</name>
 	<modules>
 		<module>focusns-model</module>
 		<module>focusns-dao</module>
