--- a/focusns-base/focusns-runtime/pom.xml
+++ b/focusns-base/focusns-runtime/pom.xml
@@ -115,5 +115,10 @@
             <groupId>org.scribe</groupId>
             <artifactId>scribe</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.flyway</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
