--- a/pom.xml
+++ b/pom.xml
@@ -309,6 +309,11 @@
                 <artifactId>flyway-core</artifactId>
                 <version>2.0.3</version>
             </dependency>
+            <dependency>
+                <groupId>net.htmlparser.jericho</groupId>
+                <artifactId>jericho-html</artifactId>
+                <version>3.3</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
