--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,11 @@
                 <artifactId>jericho-html</artifactId>
                 <version>3.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.lucene</groupId>
+                <artifactId>lucene-core</artifactId>
+                <version>3.6.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
