--- a/focusns-base/focusns-model/pom.xml
+++ b/focusns-base/focusns-model/pom.xml
@@ -10,16 +10,21 @@
     <artifactId>focusns-model</artifactId>
     <name>FocusSNS Model</name>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>javafmt-maven-plugin</groupId>
-                <artifactId>javafmt-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>javafmt-maven-plugin</groupId>
+                        <artifactId>javafmt-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
