--- a/focusns-base/focusns-service/pom.xml
+++ b/focusns-base/focusns-service/pom.xml
@@ -9,23 +9,28 @@
     <artifactId>focusns-service</artifactId>
     <name>FocusSNS Service</name>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>javafmt-maven-plugin</groupId>
-                <artifactId>javafmt-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
             <groupId>org.focusns</groupId>
             <artifactId>focusns-model</artifactId>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>javafmt-maven-plugin</groupId>
+                        <artifactId>javafmt-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>license-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
