完善 FocusSNS 插件框架，支持动态插件部署...

--- a/focusns-web/pom.xml
+++ b/focusns-web/pom.xml
@@ -46,6 +46,10 @@
 
         <dependency>
             <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
         <dependency>
@@ -75,13 +79,6 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>license-maven-plugin</artifactId>
-                    </plugin>
-                    <plugin>
-                        <groupId>net.alchim31.maven</groupId>
-                        <artifactId>yuicompressor-maven-plugin</artifactId>
-                        <configuration>
-                            <nosuffix>true</nosuffix>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
