--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>focusns-base</module>
         <module>focusns-web</module>
+        <module>focusns-plugin</module>
     </modules>
 
     <organization>
@@ -88,7 +89,7 @@
                 <plugin>
                     <groupId>javafmt-maven-plugin</groupId>
                     <artifactId>javafmt-maven-plugin</artifactId>
-                    <version>1.0.1</version>
+                    <version>1.0.2</version>
                     <executions>
                         <execution>
                             <id>java-format</id>
