--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,15 @@
     </scm>
     <pluginRepositories>
         <pluginRepository>
-            <id>mvn-repo</id>
+            <id>mvn-repo-releases</id>
             <url>https://github.com/gavin-hu/mvn-repo/raw/master/releases</url>
-            <releases>
+        </pluginRepository>
+        <pluginRepository>
+            <id>mvn-repo-snapshots</id>
+            <url>https://github.com/gavin-hu/mvn-repo/raw/master/snapshots</url>
+            <snapshots>
                 <enabled>true</enabled>
-            </releases>
+            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
@@ -61,6 +65,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>focusns-maven-plugin</groupId>
+                <artifactId>focusns-maven-plugin</artifactId>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -140,6 +148,11 @@
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
                     <version>8.1.8.v20121106</version>
+                </plugin>
+                <plugin>
+                    <groupId>focusns-maven-plugin</groupId>
+                    <artifactId>focusns-maven-plugin</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
                 </plugin>
             </plugins>
         </pluginManagement>
