--- a/focusns-web/src/main/webapp/WEB-INF/web.xml
+++ b/focusns-web/src/main/webapp/WEB-INF/web.xml
@@ -67,14 +67,9 @@
             <param-value>/WEB-INF/spring/dispatcherContext.xml</param-value>
         </init-param>
         <init-param>
-            <param-name>contextClass</param-name>
-            <param-value>org.focusns.web.springmvc.context.XmlPluginWebApplicationContext</param-value>
-        </init-param>
-        <init-param>
             <param-name>contextInitializerClasses</param-name>
             <param-value>
                 org.focusns.web.springmvc.initializer.ApplicationInitializer,
-                org.focusns.web.springmvc.initializer.PluginApplicationContextInitializer
             </param-value>
         </init-param>
     </servlet>
@@ -84,11 +79,30 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>dispatcherServlet</servlet-name>
-        <url-pattern>/widget/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>/static/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>widgetDispatcherServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring/dispatcherContext-plugin.xml</param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>org.focusns.web.springmvc.context.PluginWebApplicationContext</param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextInitializerClasses</param-name>
+            <param-value>
+                org.focusns.web.springmvc.initializer.PluginApplicationContextInitializer
+            </param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>widgetDispatcherServlet</servlet-name>
+        <url-pattern>/widget/*</url-pattern>
     </servlet-mapping>
 
     <!-- Web Application Listener -->
