Sample 插件示例工程完善，工程配置优化，支持 FocusSNS 插件开发

--- a/focusns-plugin/sample-focusns-plugin/pom.xml
+++ b/focusns-plugin/sample-focusns-plugin/pom.xml
@@ -14,6 +14,7 @@
         <dependency>
             <groupId>org.focusns</groupId>
             <artifactId>focusns-runtime</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
