--- a/pom.xml
+++ b/pom.xml
@@ -172,11 +172,6 @@
                 <artifactId>focusns-runtime</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.focusns</groupId>
-                <artifactId>focusns-web</artifactId>
-                <version>${project.version}</version>
-            </dependency>
 
             <!-- Spring Framework -->
             <dependency>
@@ -241,9 +236,9 @@
                 <version>3.1.1</version>
             </dependency>
             <dependency>
-                <groupId>org.mybatis.caches</groupId>
-                <artifactId>mybatis-ehcache</artifactId>
-                <version>1.0.1</version>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>1.1.1</version>
             </dependency>
 
             <dependency>
@@ -255,11 +250,6 @@
                 <groupId>commons-dbcp</groupId>
                 <artifactId>commons-dbcp</artifactId>
                 <version>1.3</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis-spring</artifactId>
-                <version>1.1.1</version>
             </dependency>
 
             <!-- Unit Test -->
@@ -281,21 +271,25 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <version>2.5</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
                 <version>2.1</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>javax.servlet.jsp.jstl</groupId>
                 <artifactId>jstl-api</artifactId>
                 <version>1.2</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>taglibs</groupId>
                 <artifactId>standard</artifactId>
                 <version>1.1.2</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Bean Validation -->
