--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>focusns-base</module>
         <module>focusns-web</module>
         <module>focusns-plugin</module>
+        <module>focusns-distribution</module>
     </modules>
 
     <organization>
@@ -144,6 +145,11 @@
                     <groupId>focusns-maven-plugin</groupId>
                     <artifactId>focusns-maven-plugin</artifactId>
                     <version>1.0.0-SNAPSHOT</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
                 </plugin>
             </plugins>
         </pluginManagement>
