--- a/focusns-web/pom.xml
+++ b/focusns-web/pom.xml
@@ -37,6 +37,7 @@
                 </dependencies>
             </plugin>
         </plugins>
+        <finalName>${project.artifactId}</finalName>
     </build>
 
     <dependencies>
