--- a/focusns-web/src/main/webapp/WEB-INF/web.xml
+++ b/focusns-web/src/main/webapp/WEB-INF/web.xml
@@ -48,12 +48,21 @@
     </filter-mapping>
 
     <filter>
-        <filter-name>pageFilter</filter-name>
-        <filter-class>org.focusns.common.web.page.PageFilter</filter-class>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
-            <param-name>defaultLayout</param-name>
-            <param-value>/WEB-INF/themes/default/layout2.jsp</param-value>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
         </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>pageFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>pageFilter</filter-name>
@@ -63,16 +72,16 @@
 
     <!-- Static Dispatcher -->
     <servlet>
-        <servlet-name>staticDispatcherServlet</servlet-name>
+        <servlet-name>dispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring/dispatcherContext-static.xml</param-value>
+            <param-value>/WEB-INF/spring/dispatcherContext-web.xml</param-value>
         </init-param>
         <load-on-startup>0</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>staticDispatcherServlet</servlet-name>
+        <servlet-name>dispatcherServlet</servlet-name>
         <url-pattern>/static/*</url-pattern>
     </servlet-mapping>
 
@@ -81,7 +90,7 @@
         <servlet-name>widgetDispatcherServlet</servlet-name>
         <servlet-class>org.focusns.common.web.widget.WidgetDispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-    </servlet>    
+    </servlet>
     <servlet-mapping>
         <servlet-name>widgetDispatcherServlet</servlet-name>
         <url-pattern>/widget/*</url-pattern>
