完善功能表单，并清理无用代码 1.为相册模块增加表单校验 2.清理无用的 jsp 标签控件代码

--- a/focusns-web/src/main/webapp/WEB-INF/web.xml
+++ b/focusns-web/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     <!-- Web Application Performance Monitor -->
     <filter>
         <filter-name>performanceMonitorFilter</filter-name>
-        <filter-class>org.focusns.common.monitor.filter.PerformanceMonitorFilter</filter-class>
+        <filter-class>org.focusns.common.web.performance.MonitorFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>performanceMonitorFilter</filter-name>
