maven-war-plugin 版本调整

--- a/focusns-distribution/pom.xml
+++ b/focusns-distribution/pom.xml
@@ -43,7 +43,7 @@
                         </executions>
                     </plugin>
                 </plugins>
-                <finalName>${parent.artifactId}</finalName>
+                <finalName>${project.parent.artifactId}</finalName>
             </build>
         </profile>
     </profiles>
